--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,21 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+@import "https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap";
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
